# scribedog

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml
scripts/: gen-licenses.mjs
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json  tauri.windows.conf.json  whisper-toolchain.cmake
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  updater.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  voice.rs
src/components/: AiCheckDialog.tsx  AiDiffResultView.tsx  AiRewriteDialog.tsx  AssistantEditDialog.tsx  AssistantsSettings.tsx  CodeBlockView.tsx  DeleteFileDialog.tsx  Editor.tsx  EmojiPicker.tsx  ExportDialog.tsx  FileTree.tsx  FindReplacePanel.tsx  ImageView.tsx  ImportDialog.tsx  ReplaceConfirmDialog.tsx  SettingsDialog.tsx  ShortcutsDialog.tsx  Sidebar.tsx  TableGridPicker.tsx  TableMenu.tsx  Toolbar.tsx  UnsavedChangesDialog.tsx  UpdateNotification.tsx  VoiceModelDownloadDialog.tsx  VoiceRecordingBanner.tsx  ZoomControl.tsx
src/hooks/: useAppVersion.ts  useDeleteTarget.ts  useExportTarget.ts  useFolderWatcher.ts  useGlobalShortcuts.ts  useSidebarWidth.ts  useStartupFolder.ts  useTitleRename.ts  useUpdateCheck.ts  useVoiceInput.ts  useWebviewZoom.ts  useZenMode.ts
src/i18n/: index.ts  languageName.test.ts
src/lib/: aiClient.test.ts  aiClient.ts  aiDiffWidget.ts  aiStreamWidget.ts  cleanupOrphanedImages.test.ts  codeLanguages.ts  editorFileContext.ts  print.ts  (+22 more)
(+96 files in other folders)
