[package]
name = "scribedog"
version = "0.5.2"
description = "A local Markdown editor"
authors = ["snooky234"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "md_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-window-state = "2"
tauri-plugin-opener = "2"
notify = "8"
keyring = { version = "3", features = ["windows-native", "apple-native", "sync-secret-service"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Local voice input (issue #7): whisper-rs is Unlicense, cpal is Apache-2.0 —
# both MIT-compatible permissive, per the licensing constraint in the issue.
#
# Deliberately without the `openmp` feature: ggml's own thread pool is what
# upstream whisper.cpp ships with, while MSVC only implements OpenMP 2.0 (2002)
# and linking it adds a vcomp140.dll runtime dependency. What actually decides
# transcription speed here is whisper-toolchain.cmake — see the comment there.
whisper-rs = "0.14"
cpal = "0.15"

[target.'cfg(windows)'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

